Small changes throughout the project