@@ -44,8 +44,6 @@ public class MonopolyView implements PositionChangeObserver{
     public GenericGameView genericGameView = new GenericGameView();
     private Game game;
     private final int playerSize = 25;
-    private final int pivotX = playerSize/2;
-    private final int pivotY = playerSize;
 
     MonopolyController monopolyController = new MonopolyController();
     public BorderPane mainLayout = new BorderPane();
@@ -182,7 +180,8 @@ public class MonopolyView implements PositionChangeObserver{
             playerImage.setFitWidth(playerSize);
             playerImage.setFitHeight(playerSize);
             //rotate by the bottom middle of the image
-            Rotate rotate = new Rotate(72*index, pivotX, pivotY);
+            int pivotX = playerSize / 2;
+            Rotate rotate = new Rotate(72*index, pivotX, playerSize);
             playerImage.getTransforms().add(rotate);
             playerImage.setTranslateY(-10);
             index++;
@@ -195,12 +194,12 @@ public class MonopolyView implements PositionChangeObserver{
         gameBoard.setGridLinesVisible(false);
         gameBoard.setId("gameBoardFinal");
         updateSideBar();   
-        showPlayerCards(game.getPlayers().get(0));
+        showPlayerCards(game.getPlayers().getFirst());
     }
 
     /**
      * Updates the position of the player on the board and shows the players cards.
-     * @param Player The plauyer whos to be updated.
+     * @param player The plauyer whos to be updated.
      */
     @Override
     public void positionChanged(Player player) {
@@ -211,7 +210,7 @@ public class MonopolyView implements PositionChangeObserver{
         Node node = mainLayout.lookup("#"+id);
         Rotate rotate = null;
         if (node != null) {
-            rotate = (Rotate) node.getTransforms().get(0);
+            rotate = (Rotate) node.getTransforms().getFirst();
             ((Pane) node.getParent()).getChildren().remove(node);
         }
         ImageView playerImage = new ImageView(player.getPicture().toExternalForm());
@@ -224,14 +223,11 @@ public class MonopolyView implements PositionChangeObserver{
         
 
         Tile tile = game.getBoard().getGameboard().get(player.getPosition() - 1);
-        if (tile instanceof ChanceCardTile chanceCard){
-            showChanceCard(chanceCard.getActiveChanceCard());
-        } else if (tile instanceof PropertyTile propertyTile){
-            showProperty(propertyTile.getProperty());
-        } else if(tile instanceof JailTile && player.getJailStatus() == 1) {
-            inJailText(player);
-        } else {
-            clearMiddleCard();
+        switch (tile) {
+            case ChanceCardTile chanceCard -> showChanceCard(chanceCard.getActiveChanceCard());
+            case PropertyTile propertyTile -> showProperty(propertyTile.getProperty());
+            case JailTile ignored when player.getJailStatus() == 1 -> inJailText(player);
+            case null, default -> clearMiddleCard();
         }
 
         Label positionLabel = (Label) mainLayout.lookup("#position" + player.getPlayerNumber());
@@ -317,7 +313,7 @@ public class MonopolyView implements PositionChangeObserver{
         rect.setFill(Color.valueOf(property.getColor()));
         nameHolder.getChildren().addAll(rect, name);
 
-        if (property.isPawned() == false) {
+        if (!property.isPawned()) {
             card.setStyle("-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-style: solid;");
 
             //Rent grid
@@ -400,7 +396,7 @@ public class MonopolyView implements PositionChangeObserver{
             }
             return card;
 
-        } else if (property.isPawned() == true) {
+        } else if (property.isPawned()) {
 
             Button rePurchaseButton = new Button("Re-purchase property");
             rePurchaseButton.setOnAction(e -> {
@@ -428,7 +424,7 @@ public class MonopolyView implements PositionChangeObserver{
 
         throwDice.setOnAction(e -> {
             activePlayer = game.getPlayers().get(game.getActivePlayer());
-            if(game.getGameStatus() == true && activePlayer.getJailStatus() == 0) {
+            if(game.getGameStatus() && activePlayer.getJailStatus() == 0) {
                 monopolyController.throwDice(game, activePlayer);
             } else if(activePlayer.getJailStatus() >= 1){
                 inJailOptions(activePlayer);
@@ -437,7 +433,7 @@ public class MonopolyView implements PositionChangeObserver{
 
         Button tradeButton = new Button("Trade");
         tradeButton.setOnAction(e -> {
-            if(game.getGameStatus() == true) {
+            if(game.getGameStatus()) {
                 TradeView tradeView = new TradeView();
                 tradeView.showTradeView(game, activePlayer);
             }else {
